fixed tos turnaround and rates links, narrowed stackedRows for paras too close to edge

--- a/css/index.css
+++ b/css/index.css
@@ -623,6 +623,8 @@ h2 {
   margin: 0 auto;
   align-self: center;
   align-items: center;
+  padding-left: 2%;
+  padding-right: 2%;
 }
 .pageRow {
   padding-top: 7%;
