--- a/less/home-page.less
+++ b/less/home-page.less
@@ -78,6 +78,8 @@ h2 {
 .stackedRows {
 	.vCenter();
 	.rowNWHVCenter();
+	padding-left: 2%;
+	padding-right: 2%;
 }
 
 .pageRow {
